# commonplace-api

./: .gitignore  KANBAN.md  README.md  dependencies.py  main.py  pyproject.toml
ai/: dependencies.py
images/: dependencies.py
log/: dependencies.py
routers/explore/: dependencies.py  explore.py  highlights.py  schemas.py
routers/ingest/: dependencies.py  highlight.py  highlights.py  idea.py  margin_notes.py  quote_real.py  schemas.py
routers/transform/: dependencies.py  image.py  question.py  questions.py  schemas.py  tldr.py
static/: chat.js
templates/: chat.html
