[tool.poetry]
name = "commonplace-api"
version = "0.1.0"
description = "commonplace api"
authors = ["Bram Adams <3282661+bramses@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "commonplace_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.22"
uuid = "^1.30"
supabase = "^1.2.0"
openai = "^0.28.1"
termcolor = "^2.3.0"
aiofiles = "^23.2.1"
tiktoken = "^0.5.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
